--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>bibliophile</title>
-        <link rel="stylesheet", type="text/css", href="static/style.css">
+        <link rel="stylesheet", type="text/css", href="{{ url_for('static', path='/style.css') }}">
         <meta charset="utf-8">
     </head>
     <h1>bibliophile</h1>
