--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -35,3 +35,18 @@ a:visited{
 a:active{
     color: black;
 }
+a:link{
+    color: black;
+}
+.fragment-text{
+    margin: 0 auto;
+    border: 1px solid black;
+    min-height: 200px;
+    width: 500px;
+    margin-top: 50px;
+}
+.fragment-text p{
+    margin:0;
+    padding: 3px;
+    float: left;
+}
