--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,15 +1,23 @@
 <html>
     <head>
         <title>bibliophile</title>
-        <link rel="stylesheet", type="text/css", href="{{ url_for('static', path='/style.css') }}">
+        <link rel="stylesheet", type="text/css", href="{{ url_for('static', path='/css/style.css') }}">
+        <script src="/static/js/scripts.js"></script>
         <meta charset="utf-8">
     </head>
     <h1>bibliophile</h1>
     <body>
         <div class="content">
-            <p class="text_area_field"><textarea rows="10", cols="10", placeholder="Введите фразу и bibliophile найдёт отрывок из литературных произведений."></textarea></p>
-            <p><input type="button", name="button_field", value="Отрывок"></p>
+            <form action="/test", method="POST">
+            <p class="text_area_field"><textarea id="text-fragment" rows="10", cols="10", placeholder="Введите фразу и bibliophile найдёт отрывок из литературных произведений."></textarea></p>
+            <p><input id="submit", type="button", name="button_field", value="Отрывок"></p>
+            </form>
         </div>
+        {% if message %}
+        <div class="fragment-text">
+            <p>{{ message }}</p>
+        </div>
+        {% endif %}
         <div class="github-link">
             <a href="https://github.com/VGgog/bibliophile">Исходный код</a>
         </div>
