--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,7 +2,7 @@
     <head>
         <title>bibliophile</title>
         <link rel="stylesheet", type="text/css", href="{{ url_for('static', path='/css/style.css') }}">
-        <script src="/static/js/scripts.js"></script>
+        <script src="app/static/js/scripts.js"></script>
         <meta charset="utf-8">
     </head>
     <h1>bibliophile</h1>
