--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -40,10 +40,10 @@ a:link{
 }
 .fragment-text{
     margin: 0 auto;
-    border: 1px solid black;
-    min-height: 200px;
-    width: 500px;
     margin-top: 50px;
+    height: auto;
+    width: 500px;
+    border: thin solid black
 }
 .fragment-text p{
     margin:0;
