--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -12,7 +12,11 @@
             <p><input id="submit", type="button", name="button_field", value="Отрывок"></p>
         </div>
         <div class="fragment-text" id="fragment-div">
-            <p id="fragment-text"></p>
+            <p id="fragment-text"></p><br>
+            <div class="book-info">
+                <p class="book-title" id="book-title"></p>
+                <p class="author" id="author"></p>
+            </div>
         </div>
         <div class="github-link">
             <a href="https://github.com/VGgog/bibliophile">Исходный код</a>
