--- a/templates/home.html
+++ b/templates/home.html
@@ -1,15 +1,15 @@
 <html>
     <head>
         <title>bibliophile</title>
-        <link rel="stylesheet", type="text/css", href="{{ url_for('static', path='/css/style.css') }}">
-        <script src="app/static/js/scripts.js"></script>
+        <link rel="stylesheet" type="text/css" href="/static/css/style.css">
+        <script src="/static/js/scripts.js"></script>
         <meta charset="utf-8">
     </head>
     <h1>bibliophile</h1>
     <body>
         <div class="content">
-            <p class="text_area_field"><textarea id="text-phrase" rows="10", cols="10", placeholder="Введите фразу и bibliophile найдёт отрывок из литературных произведений."></textarea></p>
-            <p><input id="submit", type="button", name="button_field", value="Отрывок"></p>
+            <p class="text_area_field"><textarea id="text-phrase" rows="10" cols="10" placeholder="Введите фразу и bibliophile найдёт отрывок из литературных произведений."></textarea></p>
+            <p><input id="submit" type="button" name="button_field" value="Отрывок"></p>
         </div>
         <div class="fragment-text" id="fragment-div">
             <p id="fragment-text"></p><br>
@@ -18,8 +18,8 @@
                 <p class="author" id="author"></p>
             </div>
         </div>
-        <div class="github-link">
+        <!--div class="github-link">
             <a href="https://github.com/VGgog/bibliophile">Исходный код</a>
-        </div>
+        </div-->
     </body>
 </html>
