--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,13 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>bibliophile</title>
         <link rel="stylesheet" type="text/css" href="/static/css/style.css">
         <script src="/static/js/scripts.js"></script>
         <meta charset="utf-8">
+        
+        <link id="favicon" rel="icon" type="image/x-icon" href="/static/images/favicon.ico">
+
     </head>
     <h1>bibliophile</h1>
     <body>
